fix: Preserve preview content height
- Prevent truncating content of preview so it is mostly hidden

--- a/packages/web-components/src/components/Attachment/styles.scss
+++ b/packages/web-components/src/components/Attachment/styles.scss
@@ -227,14 +227,8 @@
 
 .html-attachment-preview {
   padding: 0 16px;
-  height: 100%;
-  min-height: 0;
-  display: flex;
-  flex-direction: column;
-
   iframe {
-    flex: 1;
-    min-height: 0;
+    display: block;
   }
 }
 
